# Bouncy-squares-Qt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.qrc
libs/: CMakeLists.txt
libs/float/: float.cpp  float.hpp
libs/geometry/: object_handler.cpp  object_handler.hpp  point.cpp  point.hpp  vector.cpp  vector.hpp
libs/logging/: logging.hpp
libs/object_handler/: object_handler.cpp  object_handler.hpp
libs/rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.hpp
libs/shape/: shape.cpp  shape.hpp
qml/: main.qml
src/: main.cpp
tests/: CMakeLists.txt  main.cpp
tests/src/: main.cpp  point_tests.hpp  vector_tests.hpp
tests/src/point/: point_tests.cpp  point_tests.hpp
